--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -19,6 +19,6 @@
     <color name="startColor">#212121</color>
     <color name="endColor">#585858</color>
 
-    <color name="buttonColor">#BEBEBE</color>
+    <color name="buttonColor">#00CA4C</color>
 
 </resources>
