--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -13,6 +13,12 @@
         <item name="android:fontFamily">@font/roboto_medium</item>
     </style>
 
+    <style name="Gradient">
+        <item name="android:textColor">@color/textRegularColor</item>
+        <item name="android:textSize">@dimen/normalTextSize</item>
+       <item name="android:background">@drawable/gradient_shape</item>
+    </style>
+
     <style name="FullScreenTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="android:windowFullscreen">true</item>
         <item name="windowActionBar">false</item>
