--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -9,16 +9,15 @@
     <color name="white">#FFFFFFFF</color>
 
 
-
-
     <color name="myColorWhite">#BEBEBE</color>
-    <color name="myColorBlack">#000000</color>
+    <color name="myColorBlack">#2C2C2C</color>
     <color name="menuColor">#3D50DF</color>
     <color name="textRegularColor">#1E1E1E</color>
     <color name="textMediumColor">#2C2C2C</color>
-    <color name="startColor">#212121</color>
-    <color name="endColor">#585858</color>
-
+    <color name="startColor">#6C6C6C</color>
+    <color name="endColor">#BEBEBE</color>
     <color name="buttonColor">#00CA4C</color>
+    <color name="mainIconColor">#000000</color>
+
 
 </resources>
