--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="normalTextSize">@dimen/_12ssp</dimen>
-    <dimen name="smallTextSize">@dimen/_9ssp</dimen>
+    <dimen name="smallTextSize">@dimen/_10ssp</dimen>
+    <dimen name="mainButtonSize">@dimen/_44sdp</dimen>
 </resources>
