--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.MyTaxi" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.MyTaxi" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -14,4 +14,52 @@
         <item name="android:statusBarColor">@color/myColorBlack</item>
         <!-- Customize your theme here. -->
     </style>
+
+    <style name="RegularTextStyle">
+        <item name="android:textColor">@color/textRegularColor</item>
+        <item name="android:textSize">@dimen/smallTextSize</item>
+        <item name="android:fontFamily">@font/roboto_regular</item>
+    </style>
+
+    <style name="MediumTextStyle">
+        <item name="android:textColor">@color/textRegularColor</item>
+        <item name="android:textSize">@dimen/normalTextSize</item>
+        <item name="android:fontFamily">@font/roboto_medium</item>
+    </style>
+
+    <style name="Gradient">
+        <item name="android:textColor">@color/textRegularColor</item>
+        <item name="android:textSize">@dimen/normalTextSize</item>
+        <item name="android:background">@drawable/gradient_shape</item>
+    </style>
+
+    <style name="FullScreenTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:windowFullscreen">true</item>
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="myLeftButton" parent="Widget.MaterialComponents.Button">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:background">@drawable/left_button</item>
+        <item name="textAllCaps">false</item>
+        <item name="backgroundTint">@null</item>
+        <item name="android:textAppearance">@style/RegularTextStyle</item>
+    </style>
+
+    <style name="myRightButton" parent="Widget.MaterialComponents.Button">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:background">@drawable/right_button</item>
+        <item name="textAllCaps">false</item>
+        <item name="backgroundTint">@null</item>
+        <item name="android:textAppearance">@style/RegularTextStyle</item>
+    </style>
+
+    <style name="mainButtonStyle" parent="Widget.MaterialComponents.Button">
+        <item name="android:background">@drawable/gradient_shape</item>
+        <item name="backgroundTint">@null</item>
+        <item name="background">@color/white</item>
+    </style>
+
+
 </resources>
