--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
@@ -12,12 +12,18 @@
     <color name="myColorWhite">#BEBEBE</color>
     <color name="myColorBlack">#2C2C2C</color>
     <color name="menuColor">#3D50DF</color>
-    <color name="textRegularColor">#1E1E1E</color>
+    <color name="textRegularColor">#BEBEBE</color>
     <color name="textMediumColor">#2C2C2C</color>
     <color name="startColor">#6C6C6C</color>
     <color name="endColor">#BEBEBE</color>
     <color name="buttonColor">#00CA4C</color>
     <color name="mainIconColor">#000000</color>
+
+
+
+
+
+
 
 
 </resources>
