--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
@@ -18,9 +18,9 @@
     <color name="startColor">#212121</color>
     <color name="endColor">#585858</color>
     <color name="buttonColor">#00CA4C</color>
-    <color name="bu">#00CA4C</color>
     <color name="badgeColor">#EF2E2E</color>
     <color name="mainIconColor">#FFFFFFFF</color>
+
 
 
 </resources>
