--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -16,8 +16,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:mapbox_cameraTargetLat="40.7128"
-        app:mapbox_cameraTargetLng="-74.0060"
+        app:mapbox_cameraTargetLat="41.2995"
+        app:mapbox_cameraTargetLng="69.2401"
         app:mapbox_cameraZoom="9.0" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -57,31 +57,41 @@
         app:layout_constraintStart_toEndOf="@id/guidlineVertical"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
+    <androidx.cardview.widget.CardView
+
         android:id="@+id/notificationBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/_34sdp"
+        android:layout_height="@dimen/_34sdp"
         android:layout_margin="@dimen/_12sdp"
         android:backgroundTint="@color/myColorWhite"
-        android:contentDescription="@string/app"
-        app:borderWidth="0dp"
-        app:fabSize="mini"
+        app:cardCornerRadius="@dimen/_17sdp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/notifications"
-        app:tint="@color/myColorBlack" />
+        app:layout_constraintTop_toTopOf="parent">
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/notificationBadgeBtn"
-        android:layout_width="@dimen/_10sdp"
-        android:layout_height="@dimen/_10sdp"
-        android:layout_margin="@dimen/_13sdp"
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:src="@drawable/notifications" />
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/notificationBadge"
+        android:layout_width="@dimen/_14sdp"
+        android:layout_height="@dimen/_14sdp"
         android:backgroundTint="@color/badgeColor"
-        android:contentDescription="@string/app"
-        app:borderWidth="0dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:tint="@color/myColorBlack" />
+        app:cardCornerRadius="@dimen/_7ssp"
+        app:layout_constraintEnd_toEndOf="@id/notificationBtn"
+        app:layout_constraintTop_toTopOf="@id/notificationBtn">
+
+        <TextView
+            android:layout_width="18dp"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="1"
+            android:textColor="@color/white"
+            android:textSize="@dimen/_10ssp" />
+    </androidx.cardview.widget.CardView>
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guidlineCenter"
@@ -174,6 +184,24 @@
             android:layout_height="match_parent"
             android:src="@drawable/exchange_icon"
             app:tint="@color/mainIconColor" />
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/orderBadge"
+        android:layout_width="@dimen/_14sdp"
+        android:layout_height="@dimen/_14sdp"
+        android:backgroundTint="@color/badgeColor"
+        app:cardCornerRadius="@dimen/_7ssp"
+        app:layout_constraintEnd_toEndOf="@id/orderBtn"
+        app:layout_constraintTop_toTopOf="@id/orderBtn">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="1"
+            android:textColor="@color/white"
+            android:textSize="@dimen/_10ssp" />
     </androidx.cardview.widget.CardView>
 
     <TextView
